# eud-agent

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml
.github/workflows/: build-rag-index.yml
bridge/: ZZZ_10_agent_bridge.lua
ci/: Cargo.toml  README.md  build_rag_index.rs  gen_rag_parity_fixture.py
ci/corpus/: cafebook.jsonl  eud_book.jsonl
crates/isom/: Cargo.toml  build.rs
crates/isom-sys/: Cargo.toml  build.rs
crates/isom-sys/src/: lib.rs
crates/isom/src/: lib.rs
crates/isom/tests/: ffi_smoke.rs
docs/: index.html
docs/assets/: app.css  download.js
hivemind/: harness-scores.jsonl  link.json
hivemind/docs/: architecture.md  capability-survey.md  rules.md  tech-stack.md  verify.md
hivemind/docs/decisions/: 01_rag-in-process.md  02_neweps-duplicate-error.md  03_react-panel-rebuild.md  04_dist-release-distribution.md  05_monaco-editor-adoption.md  06_ai-elements-streamdown-adoption.md  07_project-memory-mcp-tool.md  08_tauri-rust-rewrite.md  09_cpp-static-lib-ffi.md  10_rag-bruteforce-fastembed.md  11_panel-tauri-ipc.md  12_bootstrap-download-distribution.md  13_ipc-v2-chat-contract.md  14_isom-dynamic-crt.md  15_in-house-rag-corpus.md  16_rag-ci-ubuntu-runner.md  17_updater-implementation.md
hivemind/docs/features/: 01_lua-bridge.md  02_python-server.md  03_agent-panel.md  04_bridge-v2-surface.md  05_agent-core.md  06_changeset-review-panel.md  07_project-memory.md  08_map-info-tool.md  09_location-write-tool.md  10_tauri-shell-bootstrap.md  11_rust-backend-core.md  12_rust-rag-fastembed.md  13_isom-ffi.md  14_lua-bridge-slim.md  15_panel-tauri-ipc.md  16_rag-corpus-pipeline.md
hivemind/reflect/: lesson-log.jsonl
hivemind/tasks/: _counter.json  _index.json
hivemind/tasks/_reports/: EUD-007-761d-report.md  EUD-008-cddc-report.md  EUD-009-6aed-report.md  EUD-010-e3af-report.md  EUD-011-cb9e-report.md  EUD-012-241a-report.md  EUD-013-6466-report.md  EUD-014-1b4e-report.md  EUD-015-c726-report.md  EUD-016-af75-report.md  EUD-017-e827-report.md  EUD-018-bafb-report.md  EUD-019-58af-report.md  EUD-020-4840-report.md  EUD-021-6479-report.md  EUD-022-5763-report.md  EUD-030-75a4-report.md  EUD-031-01ec-report.md  EUD-033-a00f-report.md  EUD-034-4043-report.md  EUD-035-2262-report.md  EUD-036-9163-report.md  EUD-037-897c-report.md  EUD-038-1a5c-report.md  EUD-039-eecb-report.md  EUD-040-b8b0-report.md  EUD-041-6332-report.md  EUD-042-45cb-report.md  EUD-048-d732-report.md  EUD-049-5d70-report.md  EUD-050-2bf4-report.md  EUD-051-6657-report.md  EUD-052-3993-report.md  EUD-053-f3ac-report.md  EUD-054-8c97-report.md  EUD-055-f4cc-report.md  EUD-056-5ca7-report.md  EUD-057-e71d-report.md  EUD-058-babc-report.md  EUD-059-e70c-report.md  (+60 more)
hivemind/tasks/active/: EUD-001-584c.md  EUD-002-684a.md  EUD-003-6e4e.md  EUD-004-16b7.md  EUD-005-9d32.md  EUD-006-50d8.md  EUD-007-761d.md  EUD-008-cddc.md  EUD-009-6aed.md  EUD-010-e3af.md  EUD-011-cb9e.md  EUD-012-241a.md  EUD-013-6466.md  EUD-014-1b4e.md  EUD-015-c726.md  EUD-016-af75.md  EUD-017-e827.md  EUD-018-bafb.md  EUD-019-58af.md  EUD-020-4840.md  EUD-021-6479.md  EUD-022-5763.md  EUD-024-4002.md  EUD-025-865b.md  EUD-026-4c16.md  EUD-027-ad4f.md  EUD-028-a6ce.md  EUD-029-063b.md  EUD-030-75a4.md  EUD-031-01ec.md  EUD-033-a00f.md  EUD-034-4043.md  EUD-035-2262.md  EUD-036-9163.md  EUD-040-b8b0.md  EUD-042-45cb.md  (+90 more)
native/isom/: .gitignore  isom_capi.cpp  isom_capi.h  isom_capi.sln  isom_capi.vcxproj
panel/: app.js  index.html  package-lock.json  package.json  style.css  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
panel/src/: App.tsx  index.css  main.tsx
scripts/: README.release.md  check_prereqs.ps1  dev_run.ps1  gen_installer_assets.ps1  install.bat  install_bridge.ps1  install_dropin.ps1  package_release.ps1  release.ps1  setup_env.ps1  uninstall.bat  uninstall_dropin.ps1
server/: pyproject.toml
server/eud_agent/: __init__.py  __main__.py  agent_runner.py  app.py  bridge_io.py  chk_info.py  codex_client.py  config.py  debuglog.py  edd_runner.py  engine.py  journal.py  lsp_gate.py  mcp_shim.py  memory.py  orchestrator.py  rag.py  runner_cli.py  runner_legacy.py  tools.py
server/eud_agent/data/: first_principles.md  unit_names.json
server/spikes/: dummy_mcp_tool.py  spike_codex_sdk.py
server/tests/: test_agent_flow.py  test_app.py  test_bridge_build_static.py  test_bridge_datx_static.py  test_bridge_io.py  test_bridge_lifecycle_static.py  test_bridge_list_static.py  test_bridge_neweps_static.py  test_bridge_plug_static.py  test_bridge_tree_static.py  test_bridge_webview_static.py  test_chk_info.py  test_codex_client.py  test_config.py  test_debuglog.py  test_deploy_scripts.py  test_edd_runner.py  test_imported_artifacts.py  test_integration_ws.py  test_journal.py  test_lsp_gate.py  test_memory.py  test_orchestrator.py  test_panel_static.py  test_rag.py  test_repo_scaffold.py  test_runner_cli.py  test_tools.py
site/: input.css  package-lock.json  package.json
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer/: hooks.nsh
src-tauri/src/: bootstrap.rs  bridge_install.rs  bridge_io.rs  chk.rs  codex_auth.rs  codex_client.rs  config.rs  engine.rs  ipc.rs  journal.rs  lib.rs  main.rs  mapsafe.rs  mcp.rs  memory.rs  rag.rs  setup.rs  tool_exec.rs  tools.rs
src-tauri/src/data/: first_principles.md
src-tauri/tests/fixtures/: rag_parity.json
tools/scraper/: .gitignore  README.md  package.json
(+230 files in other folders)
