[package]
name = "eud-agent"
version = "0.1.0"
description = "External AI agent for EUD Editor 3"
edition = "2021"
rust-version = "1.77.2"
publish = false

[lib]
# Tauri 2 idiomatic split: the app entry lives in a lib so the same code can be
# reused by mobile targets / integration tests; main.rs is a thin shim.
name = "eud_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
fastembed = "5.15"
