[package]
name = "eud-agent"
version = "0.1.0"
description = "External AI agent for EUD Editor 3"
edition = "2021"
rust-version = "1.77.2"
publish = false

[lib]
# Tauri 2 idiomatic split: the app entry lives in a lib so the same code can be
# reused by mobile targets / integration tests; main.rs is a thin shim.
name = "eud_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
# Self-update (Decision 04): the updater downloads + verifies + installs the signed
# NSIS bundle from the public GitHub Release; `process` supplies relaunch() after install.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
which = "8"
isom = { path = "../crates/isom" }
fastembed = "5.15"
similar = "2"
# Bootstrap downloader (EUD-100): rustls-tls avoids OpenSSL so it builds cleanly on the
# MSVC toolchain; `stream` yields the chunked body for byte-progress reporting.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
sha2 = "0.10"
# CHK string-table decode (EUD-105): EUC_KR == cp949 (WHATWG euc-kr index = unified hangul
# code), matching chk_info.py's utf-8 -> cp949 -> latin-1 fallback for Korean map names.
encoding_rs = "0.8"
rmcp = { version = "1.7.0", features = ["server", "transport-streamable-http-server"] }
axum = "0.8.4"
